<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>


    <string name="download">Download</string>
    <string name="channel">Download</string>

    <string name="go_to_detail">detail</string>


    <string name="option1">Glide - Image Loading Library by BumpTech</string>
    <string name="option2">LoadApp - Current repository by Udacity</string>
    <string name="option3">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>


    <string name="file_name">file name :</string>
    <string name="done">done</string>
    <string name="status">Status :</string>
    <string name="success">Success</string>
</resources>
